src/main/java/com/example/jobala/_core/errors/apiException/ApiException500.java
package com.example.jobala._core.errors.apiException;

public class ApiException500 extends RuntimeException {

    public ApiException500(String msg) {
        super(msg);
    }
}
